--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Afx-Abu/abu-md /jsl/Abu
+RUN git clone https://github.com/samurai-maker/whatsappub /jsl/Abu
 WORKDIR /jsl/Abu
 ENV TZ=Asia/Kolkata
 RUN npm install supervisor -g
